# lyapunov_slippage_controller

./: CMakeLists.txt  README.md  package.xml
config/: optimal_traj_2_fine_13_10.csv  optimal_traj_3_fine_13_10.csv
include/lyapunov_slippage_controller/: coppeliaSimNode.cpp  coppeliaSimNode.h  differential_drive_model.cpp  differential_drive_model.h  error_codes.cpp  error_codes.h  generalPurpose.cpp  generalPurpose.h  lyapunovController.cpp  lyapunovController.h  motionModels.cpp  motionModels.h
include/unicycle_controller/: differential_drive_model.h  error_codes.cpp  error_codes.h  generalPurpose.cpp  generalPurpose.h  lyapunovController.cpp  lyapunovController.h  motionModels.cpp  motionModels.h
launch/: coppeliaSim_differential_open_loop.launch copy.py  coppeliaSim_differential_robot_controller.launch.py  differential_lyap_cl_dubins_lab.launch.py  differential_lyap_cl_lab.launch.py  differential_lyap_cl_lab_traj_from_csv.launch.py  differential_lyap_cl_outdoor.launch.py  differential_ol_lab.launch.py  differential_ol_outdoor.launch.py  slippage_cl_dubins_lab.launch.py  test_optitrack.launch.py  unicycle_robot_simulation.launch.py
models/: model_alpha.cbm  model_beta_l.cbm
optim_interfaces/: CMakeLists.txt  package.xml
optim_interfaces/srv/: Optim.srv
src/: differential_drive_cl_node.cpp  differential_drive_ol_node.cpp  feedbackTester.cpp  slippage_controller_node.cpp  test_service_call_optimizer.cpp  unicycle_cl_node.cpp  unicycle_ol_node.cpp
