<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lyapunov_slippage_controller</name>
  <version>0.0.0</version>
  <description>This package provides a controller for a skid-steering vehicle</description>
  <maintainer email="davide.dorigoni@unitn.it">DavDori</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <exec_depend>ros2launch</exec_depend>
  
  <depend>optim_interfaces</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
